2006-05-02  Hendrik Tews  <tews@penguin.cs.kun.nl>

	SMBASE:
	* deleted to nullable define
	
	AST: 
	* added nullable flag to contructor arguments
	  + ast syntax: astclass(nullable ... )
	  + checked for in parseCtorArg (together with owner)
	* ocaml marshalling translates nullable into option types
	* assertion checks for nullable fields in constructors are
	  disabled for the moment (seems some fields are filled in later)
	* astgen: new assertNonNullCtorArgs to emit assertion checks in
	  constructors (not used at the moment)
	* astgen: new ocaml_arg_list simplifies code for marshalling
	  childs
	* configure detects ocaml (for ocamlhelp.cc)
	* added option_some_constr for (Some x) to ocamlhelp.{h,cc}

	ELSA:
	* successfully run regression tests
	* added -ocaml option to regrtest to run test with ocaml
	  marshalling
	* started nullable debugging with regrtest -ocaml (9 nullable
	  added so far, one undocumented)

2006-05-01  Hendrik Tews  <tews@penguin.cs.kun.nl>

	* renamed Type into CType

	* fixed bug in elkhound grammar: Tok_ARROW for "->"
	* astgen: generated ml does not register callbacks during module
	init
	* fixed caml include problem: extern "C"
	* added ocaml things to configure/sm_config and elsa/Makefile.in
	* invoke caml marshalling for sysTrace marshallToOcaml
	* does segfault deep in the ast

2006-04-30  Hendrik Tews  <tews@debian>

	* small fixes in astgen
	* modified elsa ast for ocaml serialization
	* started elsa configuration for ocaml

	* changed list allocation in ..._from_list functions, use
	  caml_alloc and Store_field now

2006-04-28  Hendrik Tews  <tews@debian>

	* added ocaml_from_SourceLoc

2006-04-28  Hendrik Tews  <tews@penguin.cs.kun.nl>

	* ocaml serialization almost finished: only ocaml_from_SourceLoc
	  is missing
	* added getPtrBase to astgen.cc to extract pointer base type
	* simplified ocaml_from_function
	* treat FakeList pointers correcly
	* new file ocamlhelp.cc as implementation of ocamlhelp.h